[package]
name = "calco"
version = "0.1.0"
authors = ["Aelto <Aelto@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-files = "0.2.1"
actix-utils = "1.0.3"
actix-rt = "1.0.0"
actix-multipart = "0.2.0"

maud = { version = "*", features = ["actix-web"] }
rusqlite = { version = "0.21.0", features = ["bundled"] }
serde = "1.0.104"
futures = "0.3.1"

# passwords & tokens
uuid = { version = "0.8.1", features = ["v4"] }
ring = "0.16.9"
clipboard = "0.5.0"
bytes = "0.5.3"